spiffe-envoy-sidecar/front-end/frontend-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8003
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: service_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: backend_service
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: backend_service
    connect_timeout: 10.0s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: backend
        port_value: 8002
    tls_context:
      common_tls_context:
        tls_certificates:
          certificate_chain:
            filename: /tmp/certs/svid.pem
          private_key:
            filename: /tmp/certs/svid_key.pem
        validation_context:
          trusted_ca:
            filename: /tmp/certs/svid_bundle.pem
          verify_subject_alt_name:
          - spiffe://example.org/back-end
        tls_params:
          ecdh_curves:
          - X25519:P-256:P-521:P-384
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
